--- a/My recipe book/Base.lproj/Main.storyboard
+++ b/My recipe book/Base.lproj/Main.storyboard
@@ -355,16 +355,16 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="hdW-Jh-Ct1">
-                                <rect key="frame" x="10" y="54" width="394" height="798"/>
+                                <rect key="frame" x="10" y="54" width="394" height="835"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Screen_Shot_2021-06-02_at_18.23.09-removebg-preview" translatesAutoresizingMaskIntoConstraints="NO" id="Iya-CU-JjN">
-                                        <rect key="frame" x="0.0" y="0.0" width="394" height="338"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="394" height="375"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="150" id="zyI-Ca-q0k"/>
                                         </constraints>
                                     </imageView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Login" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nrh-FH-Gpd">
-                                        <rect key="frame" x="0.0" y="338" width="394" height="100"/>
+                                        <rect key="frame" x="0.0" y="375" width="394" height="100"/>
                                         <constraints>
                                             <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="80" id="4Xu-h1-V0l"/>
                                             <constraint firstAttribute="height" constant="100" id="yWQ-Yk-4NO"/>
@@ -374,7 +374,7 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Mail" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="aZ6-eO-Xxm">
-                                        <rect key="frame" x="0.0" y="438" width="394" height="80"/>
+                                        <rect key="frame" x="0.0" y="475" width="394" height="80"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="80" id="ben-bg-V8S"/>
                                         </constraints>
@@ -382,7 +382,7 @@
                                         <textInputTraits key="textInputTraits"/>
                                     </textField>
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Q8P-kc-MfV">
-                                        <rect key="frame" x="0.0" y="518" width="394" height="80"/>
+                                        <rect key="frame" x="0.0" y="555" width="394" height="80"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="80" id="Dia-Kh-yrf"/>
                                         </constraints>
@@ -390,13 +390,13 @@
                                         <textInputTraits key="textInputTraits" secureTextEntry="YES" textContentType="password"/>
                                     </textField>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DhQ-6u-c2d">
-                                        <rect key="frame" x="0.0" y="598" width="394" height="40"/>
+                                        <rect key="frame" x="0.0" y="635" width="394" height="40"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="adP-DY-GHa">
-                                        <rect key="frame" x="0.0" y="638" width="394" height="80"/>
+                                        <rect key="frame" x="0.0" y="675" width="394" height="80"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="80" id="sAg-eb-Daj"/>
                                         </constraints>
@@ -409,7 +409,7 @@
                                         </connections>
                                     </button>
                                     <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ORW-rI-GHG">
-                                        <rect key="frame" x="0.0" y="718" width="394" height="80"/>
+                                        <rect key="frame" x="0.0" y="755" width="394" height="80"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Don't have an account yet?" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KNj-XD-QHI">
                                                 <rect key="frame" x="0.0" y="0.0" width="218" height="80"/>
@@ -571,8 +571,8 @@
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4Jq-lc-zul">
                                 <rect key="frame" x="0.0" y="44" width="414" height="852"/>
                                 <subviews>
-                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="fA2-OD-wvw">
-                                        <rect key="frame" x="0.0" y="0.0" width="414" height="710"/>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="fA2-OD-wvw">
+                                        <rect key="frame" x="20" y="0.0" width="414" height="760"/>
                                         <subviews>
                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Screen_Shot_2021-06-02_at_18.23.09-removebg-preview" translatesAutoresizingMaskIntoConstraints="NO" id="sDF-jA-rV7">
                                                 <rect key="frame" x="0.0" y="0.0" width="414" height="250"/>
@@ -581,16 +581,16 @@
                                                 </constraints>
                                             </imageView>
                                             <stackView opaque="NO" contentMode="scaleToFill" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="20E-TN-vqX" userLabel="name">
-                                                <rect key="frame" x="0.0" y="250" width="414" height="50"/>
+                                                <rect key="frame" x="0.0" y="260" width="414" height="50"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name:" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="inJ-sH-xLu">
-                                                        <rect key="frame" x="0.0" y="0.0" width="52" height="50"/>
-                                                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
+                                                        <rect key="frame" x="0.0" y="0.0" width="49.5" height="50"/>
+                                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                         <nil key="textColor"/>
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="f1j-jk-5j8">
-                                                        <rect key="frame" x="72" y="0.0" width="342" height="50"/>
+                                                        <rect key="frame" x="69.5" y="0.0" width="344.5" height="50"/>
                                                         <constraints>
                                                             <constraint firstAttribute="height" constant="50" id="aaH-iO-LkS"/>
                                                         </constraints>
@@ -600,7 +600,7 @@
                                                 </subviews>
                                             </stackView>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Type:" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pLv-sb-9Hu">
-                                                <rect key="frame" x="0.0" y="300" width="414" height="50"/>
+                                                <rect key="frame" x="0.0" y="320" width="414" height="50"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="50" id="99V-wA-TH0"/>
                                                 </constraints>
@@ -609,7 +609,7 @@
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="MV4-F2-Khe">
-                                                <rect key="frame" x="0.0" y="350" width="414" height="170"/>
+                                                <rect key="frame" x="0.0" y="380" width="414" height="170"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Ingredients" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7cH-bO-DvA">
                                                         <rect key="frame" x="0.0" y="0.0" width="414" height="50"/>
@@ -631,13 +631,13 @@
                                                 </subviews>
                                             </stackView>
                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="noImages" translatesAutoresizingMaskIntoConstraints="NO" id="7Xd-RO-vg5">
-                                                <rect key="frame" x="0.0" y="520" width="414" height="150"/>
+                                                <rect key="frame" x="0.0" y="560" width="414" height="150"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="150" id="tE4-Pa-s4A"/>
                                                 </constraints>
                                             </imageView>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="OV6-O8-Zhv">
-                                                <rect key="frame" x="0.0" y="670" width="414" height="40"/>
+                                                <rect key="frame" x="0.0" y="720" width="414" height="40"/>
                                                 <color key="backgroundColor" systemColor="systemRedColor"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="40" id="xEA-Ge-CrC"/>
@@ -653,15 +653,20 @@
                                         </subviews>
                                         <constraints>
                                             <constraint firstAttribute="bottom" secondItem="OV6-O8-Zhv" secondAttribute="bottom" id="BMt-VS-hTx"/>
+                                            <constraint firstItem="OV6-O8-Zhv" firstAttribute="top" secondItem="7Xd-RO-vg5" secondAttribute="bottom" constant="10" id="Euo-zG-5PH"/>
                                             <constraint firstItem="20E-TN-vqX" firstAttribute="top" secondItem="sDF-jA-rV7" secondAttribute="bottom" constant="10" id="OWb-dS-pxw"/>
+                                            <constraint firstItem="7Xd-RO-vg5" firstAttribute="top" secondItem="MV4-F2-Khe" secondAttribute="bottom" constant="10" id="inM-qT-lvR"/>
+                                            <constraint firstItem="OV6-O8-Zhv" firstAttribute="top" secondItem="7Xd-RO-vg5" secondAttribute="bottom" constant="10" id="j56-1C-CHr"/>
                                         </constraints>
                                     </stackView>
                                 </subviews>
                                 <constraints>
-                                    <constraint firstItem="fA2-OD-wvw" firstAttribute="leading" secondItem="7r0-JD-Tz9" secondAttribute="leading" id="DjX-dA-246"/>
+                                    <constraint firstItem="fA2-OD-wvw" firstAttribute="leading" secondItem="7r0-JD-Tz9" secondAttribute="leading" constant="10" id="DjX-dA-246"/>
                                     <constraint firstItem="fA2-OD-wvw" firstAttribute="bottom" secondItem="7r0-JD-Tz9" secondAttribute="bottom" id="GK7-zD-fZM"/>
+                                    <constraint firstItem="fA2-OD-wvw" firstAttribute="leading" secondItem="251-b3-fnx" secondAttribute="leading" constant="10" id="KmP-df-HXX"/>
                                     <constraint firstItem="fA2-OD-wvw" firstAttribute="width" secondItem="251-b3-fnx" secondAttribute="width" id="OLU-b2-zc9"/>
                                     <constraint firstItem="fA2-OD-wvw" firstAttribute="top" secondItem="7r0-JD-Tz9" secondAttribute="top" id="Tls-pw-75Q"/>
+                                    <constraint firstItem="fA2-OD-wvw" firstAttribute="trailing" secondItem="251-b3-fnx" secondAttribute="trailing" constant="10" id="rbB-7v-CsQ"/>
                                     <constraint firstItem="fA2-OD-wvw" firstAttribute="trailing" secondItem="7r0-JD-Tz9" secondAttribute="trailing" id="xIN-nA-e7I"/>
                                 </constraints>
                                 <viewLayoutGuide key="contentLayoutGuide" id="7r0-JD-Tz9"/>
